# git-ai-analyzer

./: Cargo.toml  LICENSE  README.md  gitlog.md
src/: main.rs
