[package]
name = "git-summary-ai"
version = "0.1.0"
edition = "2024"
description = "A CLI tool to collect Git logs and summarize them for management using Google Gemini AI."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"