[package]
name = "git-analyzer"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to collect Git logs and summarize them for management using AI."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
directories = "5.0"
inquire = "0.7"
anyhow = "1.0"